--- a/index.html
+++ b/index.html
@@ -45,5 +45,101 @@
         </div>
     </header>
 
+    <section class="section1">
+        <div class="container">
+            <h4 class="tilte1">All our room types are including complementary breakfast</h4>
+
+            <div class="wrap1">
+                <div class="box1">
+                    <h3>Luxury redefined</h3>
+                    <p>Our rooms are designed to transport 
+                        you into an environment made for leisure. 
+                        Take your mind off the day-to-day of home 
+                        life and find a private paradise for yourself.</p>
+                    <button class="btn">EXPLORE</button>
+                </div>
+
+                <img class="img1" src="./img/Group 83.png" alt="">
+            </div>
+
+            <div class="wrap1">
+                <div class="box1">
+                    <h3>Leave your worries in 
+                        the sand</h3>
+                    <p>Our rooms are designed to transport 
+                        you into an environment made for leisure. 
+                        Take your mind off the day-to-day of home 
+                        life and find a private paradise for yourself.</p>
+                    <button class="btn">EXPLORE</button>
+                </div>
+
+                <img class="img1" src="./img/Group 94.png" alt="">
+            </div>
+        </div>
+    </section>
+
+    <section class="section2">
+        <div class="container">
+            <div class="wrap2">
+                <h3>Testimonials</h3>
+                <h4>"Calm, Serene, Retro – What a way to relax and enjoy"</h4>
+                <p> Mr. and Mrs. Baxter, UK</p>
+                <div class="btns2">
+                    <img src="./img/arrow-left.svg" alt="left">
+                    <img src="./img/arrow-right.svg" alt="right">
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <div class="icon"></div>
+    
+    <footer class="footer">
+        <div class="container">
+            <div class="footer-wrap">
+                <div>
+                    <img class="footer-logo" src="./img/logo-footer.svg" alt="logo-footer">
+                    <p>497 Evergreen Rd. Roseville, CA 95673 <br>
+                        +44 345 678 903 <br>
+                        luxury_hotels@gmail.com</p>
+                </div>
+
+                <div>
+                    <a href="#">
+                        About Us
+                    </a>
+                    <a href="#">
+                        Contact
+                    </a>
+                    <a href="#">
+                        Terms & Conditions
+                    </a>
+                </div>
+
+                <div>
+                    <a href="#">
+                        <img src="./img/facebook.svg" alt="">
+                        Facebook</a>
+                    <a href="#">
+                        <img src="./img/twitter.svg" alt="">
+                        Twitter</a>
+                    <a href="#">
+                        <img src="./img/instagram.svg" alt="">
+                        Instagram</a>
+                </div>
+
+                <div>
+                    <b>Subscribe to our newsletter</b>
+
+                    <form action="">
+                        <input placeholder="Email Address" type="text">
+                        <button class="btn">OK</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </footer>
+
 </body>
 </html>
